<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".TermsAndCondition">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/firbaseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="Terms &amp; Conditions"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acceptBtn"
        android:layout_below="@+id/firbaseText"
        android:layout_margin="15dp">

        <RelativeLayout
            android:id="@+id/insideScrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000">

            <TextView
                android:id="@+id/licenseAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="USER LICENSE AGREEMENT"
                android:textColor="#FFF000"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/Terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/licenseAgreement"
                android:fontFamily="sans-serif-light"
                android:text="@string/licenseAgreement"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="#e5e5e5"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Terms2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Terms"
                android:fontFamily="sans-serif-light"
                android:text="@string/licenseAgreement2"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="#e5e5e5"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Terms3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Terms2"
                android:fontFamily="monospace"
                android:text="@string/licenseAgreement3"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Terms4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Terms3"
                android:fontFamily="sans-serif-light"
                android:text="@string/licenseAgreement4"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="#e5e5e5"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/Terms5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Terms4"
                android:fontFamily="sans-serif-light"
                android:text="@string/licenseAgreement5"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="#e5e5e5"
                android:textSize="22sp"/>


        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_bg"
        android:text="Accept"
        android:textColor="#000000" />


    <Button
        android:id="@+id/declineBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_bg"
        android:text="Decline"
        android:textColor="#000000" />
</RelativeLayout>