<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RecordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RecordActivity">
        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar">
        </include>
        <RelativeLayout
            android:layout_marginTop="155dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hourField"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="270dp"
                android:background="@drawable/round_bg"
                android:hint="@string/hh"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="2"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/minuteField"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="156dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="175dp"
                android:background="@drawable/round_bg"
                android:hint="@string/mm"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="2"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/secondField"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/round_bg"
                android:hint="@string/ss"
                android:inputType="phone"
                android:maxLength="2"
                android:gravity="center"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />
            <Button
                android:id="@+id/intervalRecorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hourField"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="75dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/round_bg"
                android:text="Change Interval"
                android:textColor="#000000" />
            </RelativeLayout>
    </LinearLayout>
</ScrollView>