<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterLoginPage">
    <ImageView
        android:id="@+id/firbaseImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_firebase_logo"
        android:contentDescription="@string/app_name"/>
    <ImageView
        android:id="@+id/firbaseImageCopy"
        android:visibility="invisible"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_firebase_logo"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/firbaseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebase_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/firbaseImage"
        android:gravity="center"/>
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/fireProgressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firbaseText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/fireLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:textColor="#000000"
        android:text="@string/login_with_google"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"/>

    <LinearLayout
        android:id="@+id/firstlinear"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_below="@+id/firbaseText"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">
        <EditText
            android:inputType="textWebEmailAddress"
            android:gravity="center"
            android:hint="Enter mail to get the recordings"
            android:textColorHint="#000000"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:id="@+id/Recorder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/firstlinear"
            android:background="@drawable/round_bg"
            android:textColor="#000000"
            />
        <Button
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:id="@+id/svRecorder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/firstlinear"
            android:background="@drawable/round_bg"
            android:text="Continue"
            android:textColor="#000000"
            />
    </LinearLayout>
</RelativeLayout>